Upgrade Java version from 17 to 21